Methods and Sliders

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -104,7 +104,7 @@
         android:id="@+id/slideText"
         android:layout_width="123dp"
         android:layout_height="53dp"
-        android:text="TextView"
+        android:text="0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.812"
