Functional sliders and "get time"

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,7 @@
         android:value="20"
         android:valueFrom="0"
         android:valueTo="100"
+        android:alpha="0.3"
         app:labelBehavior="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,6 +39,7 @@
         android:value="20"
         android:valueFrom="0"
         android:valueTo="100"
+        android:alpha="0.3"
         app:labelBehavior="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -102,14 +104,16 @@
 
     <TextView
         android:id="@+id/slideText"
-        android:layout_width="123dp"
-        android:layout_height="53dp"
+        android:layout_width="351dp"
+        android:layout_height="82dp"
+        android:gravity="center"
         android:text="0"
+        android:textSize="12pt"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.812"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.275" />
+        app:layout_constraintVertical_bias="0.251" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
