--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,39 +13,40 @@
         android:id="@+id/coldSlider"
         android:layout_width="255dp"
         android:layout_height="58dp"
+        android:alpha="0.3"
         android:stepSize="1.0"
         android:value="20"
         android:valueFrom="0"
         android:valueTo="100"
-        android:alpha="0.3"
         app:labelBehavior="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.794"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.699"
         app:thumbColor="@color/black"
         app:tickVisible="false"
         app:trackColorActive="@color/colorSecondary"
         app:trackHeight="11dp"
-        app:values="@array/SliderTest"
-         />
+        app:values="@array/SliderTest" />
 
     <com.google.android.material.slider.Slider
         android:id="@+id/warmSlider"
-        android:layout_width="259dp"
-        android:layout_height="48dp"
+        android:layout_width="255dp"
+        android:layout_height="47dp"
+        android:alpha="0.3"
         android:stepSize="1.0"
         android:value="20"
         android:valueFrom="0"
         android:valueTo="100"
-        android:alpha="0.3"
         app:labelBehavior="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/coldSlider"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.756"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.383"
+        app:layout_constraintVertical_bias="0.967"
         app:thumbColor="@color/black"
         app:tickVisible="false"
         app:trackColorActive="@color/colorPrimary"
@@ -57,50 +58,36 @@
         android:id="@+id/mtb"
         android:layout_width="368dp"
         android:layout_height="80dp"
-        android:layout_marginTop="10dip"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.488"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.781"
         mtb:labels="@array/modes_array"
         mtb:layout_constraintHorizontal_bias="0.500"
-        mtb:layout_constraintVertical_bias="0.669"
+        mtb:layout_constraintVertical_bias="0.869"
+        mtb:mtbColorPressedText="@color/white"
+        mtb:mtbColorUnpressedText="@color/white"
+        mtb:mtbCornerRadius="32dp"
         mtb:mtbMultipleChoice="false"
+        mtb:mtbPressedColor="@color/colorPrimaryDark"
         mtb:mtbRoundedCorners="true"
         mtb:mtbScrollable="false"
         mtb:mtbSelectFirstItem="true"
-        mtb:mtbCornerRadius="32dp"
-        mtb:mtbColorPressedText="@color/white"
-        mtb:mtbColorUnpressedText="@color/white"
-        mtb:mtbPressedColor="@color/colorPrimaryDark"
         mtb:mtbUnpressedColor="@color/colorPrimary" />
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="102dp"
         android:layout_height="127dp"
-        app:srcCompat="@drawable/sunthing"
-        mtb:layout_constraintBottom_toBottomOf="parent"
-        mtb:layout_constraintEnd_toEndOf="parent"
-        mtb:layout_constraintHorizontal_bias="0.022"
-        mtb:layout_constraintStart_toStartOf="parent"
-        mtb:layout_constraintTop_toTopOf="parent"
-        mtb:layout_constraintVertical_bias="0.37"
-        />
-
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="@style/AppTheme"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintEnd_toStartOf="@+id/warmSlider"
+        app:layout_constraintHorizontal_bias="0.615"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.615"
+        app:srcCompat="@drawable/sunthing" />
 
     <TextView
         android:id="@+id/slideText"
@@ -111,9 +98,19 @@
         android:textSize="12pt"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.533"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.251" />
+        app:layout_constraintVertical_bias="0.499" />
+
+    <View
+        android:id="@+id/view"
+        android:layout_width="381dp"
+        android:layout_height="324dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.039" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
