--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:mtb="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -43,7 +46,7 @@
         app:labelBehavior="gone"
         app:layout_constraintBottom_toTopOf="@+id/coldSlider"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.756"
+        app:layout_constraintHorizontal_bias="0.81"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.967"
@@ -52,30 +55,7 @@
         app:trackColorActive="@color/colorPrimary"
         app:trackHeight="11dp"
         app:values="@array/SliderTest"
-        mtb:layout_constraintHorizontal_bias="0.815" />
-
-    <com.sha.kamel.multitogglebutton.MultiToggleButton
-        android:id="@+id/mtb"
-        android:layout_width="368dp"
-        android:layout_height="80dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.488"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.781"
-        mtb:labels="@array/modes_array"
-        mtb:layout_constraintHorizontal_bias="0.500"
-        mtb:layout_constraintVertical_bias="0.869"
-        mtb:mtbColorPressedText="@color/white"
-        mtb:mtbColorUnpressedText="@color/white"
-        mtb:mtbCornerRadius="32dp"
-        mtb:mtbMultipleChoice="false"
-        mtb:mtbPressedColor="@color/colorPrimaryDark"
-        mtb:mtbRoundedCorners="true"
-        mtb:mtbScrollable="false"
-        mtb:mtbSelectFirstItem="true"
-        mtb:mtbUnpressedColor="@color/colorPrimary" />
+         />
 
     <ImageView
         android:id="@+id/imageView2"
@@ -89,28 +69,121 @@
         app:layout_constraintVertical_bias="0.615"
         app:srcCompat="@drawable/sunthing" />
 
+
     <TextView
-        android:id="@+id/slideText"
+        android:id="@+id/blueText"
         android:layout_width="351dp"
         android:layout_height="82dp"
         android:gravity="center"
-        android:text="0"
+        android:text="@string/Button"
         android:textSize="12pt"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.533"
+        app:layout_constraintHorizontal_bias="0.516"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.499" />
+        app:layout_constraintVertical_bias="0.412" />
 
-    <View
-        android:id="@+id/view"
-        android:layout_width="381dp"
-        android:layout_height="324dp"
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="76dp"
+        android:layout_height="76dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.082"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView2"
+        app:layout_constraintVertical_bias="0.329"
+        app:srcCompat="@drawable/snowflake_2910087_1920_1024x791" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnConnect"
+        android:layout_width="108dp"
+        android:layout_height="49dp"
+        android:text="Connect"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.039" />
+        app:backgroundTint="@color/colorPrimary"
+        app:cornerRadius="25dp"
+        android:clickable="true"
+        />
+
+    <com.google.android.material.button.MaterialButtonToggleGroup
+        android:id="@+id/mtb"
+        android:layout_width="271dp"
+        android:layout_height="49dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.876"
+        app:singleSelection="true"
+        app:selectionRequired="true"
+        app:checkedButton="@id/btnOff"
+
+        >
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnOff"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="12dp"
+            android:layout_marginRight="12dp"
+            android:text="Off"
+            tools:layout_editor_absoluteY="603dp"
+            app:cornerRadius="16dp"
+            app:backgroundTint="@color/colorPrimary"
+            android:textColor="@color/white"
+            />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnCycle"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Cycle"
+            tools:layout_editor_absoluteX="139dp"
+            tools:layout_editor_absoluteY="603dp"
+            app:backgroundTint="@color/colorPrimary"
+            android:textColor="@color/white"
+            />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnManual"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="28dp"
+            android:layout_marginLeft="28dp"
+            android:text="Manual"
+            tools:layout_editor_absoluteY="603dp"
+            app:cornerRadius="16dp"
+            app:backgroundTint="@color/colorPrimary"
+            android:textColor="@color/white"
+            />
+    </com.google.android.material.button.MaterialButtonToggleGroup>
+<!-- androidx.recyclerview.widget.RecyclerView-->
+    <ListView
+        android:id="@+id/deviceList"
+        android:layout_width="383dp"
+        android:layout_height="255dp"
+        android:divider="@android:color/black"
+        tools:isScrollContainer="true"
+        tools:scrollbars="none"
+        tools:divider="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.032"
+        tools:listitem="@layout/device_list"
+        android:scrollbars="vertical"
+
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
